前置准备v2（调整表结构）

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,6 @@ mybatis:
   type-aliases-package: com.example.test.bean
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+
+# WeChat applet
