--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,12 +10,13 @@ spring:
     multipart:
       max-file-size: 20MB
       max-request-size: 100MB
+
 #  redis:
 #    host: 192.168.10.100
 #    port: 6379
 
 
-mybatis:
+mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.example.test.bean
   configuration:
