--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
       max-file-size: 20MB
       max-request-size: 100MB
 
-#  redis:
-#    host: 192.168.10.100
-#    port: 6379
+  redis:
+    host: 43.143.29.193
+    port: 6379
 
 
 mybatis-plus:
