远端部署v2（添加websocket）

--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,10 @@
             <artifactId>mahout-integration</artifactId>
             <version>0.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
